--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
-  "name": "wdt-skywise-tiles-leaflet",
+  "name": "wdt-skywise-tiles",
   "version": "1.0.0",
-  "description": "Leaflet plugin to display Skywise Tiles",
+  "description": "Plugin to display Skywise Tiles on multiple platforms",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "docs": "documentation readme index.js  --section api",
-    "eslint": "./node_modules/eslint/bin/eslint.js -c .eslintrc lib/**/*.js lib/*.js *.js",
-    "watch": "watchify index.js src/*.js -o dist/skywise-tiles.src.js -dv",
-    "browserify-google": "browserify google.js > dist/skywise-tiles.google.src.js",
-    "uglify-google": "uglifyjs dist/skywise-tiles.google.src.js > dist/skywise-tiles.google.js",
-    "build-google": "npm run browserify-google && npm run uglify-google",
-    "browserify-leaflet": "browserify leaflet.js > dist/skywise-tiles.leaflet.src.js",
-    "uglify-leaflet": "uglifyjs dist/skywise-tiles.leaflet.src.js > dist/skywise-tiles.leaflet.js",
-    "build-leaflet": "npm run browserify-leaflet && npm run uglify-leaflet",
-    "browserify-mapbox": "browserify mapbox.js > dist/skywise-tiles.mapbox.src.js",
-    "uglify-mapbox": "uglifyjs dist/skywise-tiles.mapbox.src.js > dist/skywise-tiles.mapbox.js",
-    "build-mapbox": "npm run browserify-mapbox && npm run uglify-mapbox",
-    "browserify-mapbox-gl": "browserify mapbox-gl.js > dist/skywise-tiles.mapbox-gl.src.js",
-    "uglify-mapbox-gl": "uglifyjs dist/skywise-tiles.mapbox-gl.src.js > dist/skywise-tiles.mapbox-gl.js",
-    "build-mapbox-gl": "npm run browserify-mapbox-gl && npm run uglify-mapbox-gl"
+    "docs": "documentation readme *.js  --section api",
+    "eslint": "./node_modules/eslint/bin/eslint.js -c .eslintrc src/**/*.js src/*.js *.js",
+    "watch:google": "watchify google.js src/*.js -o dist/skywise-tiles.google.src.js -dv",
+    "watch:leaflet": "watchify leaflet.js src/*.js -o dist/skywise-tiles.leaflet.src.js -dv",
+    "watch:mapbox": "watchify mapbox.js src/*.js -o dist/skywise-tiles.mapbox.src.js -dv",
+    "watch:mapbox-gl": "watchify mapbox-gl.js src/*.js -o dist/skywise-tiles.mapbox-gl.src.js -dv",
+    "browserify:google": "browserify google.js > dist/skywise-tiles.google.src.js",
+    "uglify:google": "uglifyjs dist/skywise-tiles.google.src.js > dist/skywise-tiles.google.js",
+    "build:google": "npm run browserify:google && npm run uglify:google",
+    "browserify:leaflet": "browserify leaflet.js > dist/skywise-tiles.leaflet.src.js",
+    "uglify:leaflet": "uglifyjs dist/skywise-tiles.leaflet.src.js > dist/skywise-tiles.leaflet.js",
+    "build:leaflet": "npm run browserify:leaflet && npm run uglify:leaflet",
+    "browserify:mapbox": "browserify mapbox.js > dist/skywise-tiles.mapbox.src.js",
+    "uglify:mapbox": "uglifyjs dist/skywise-tiles.mapbox.src.js > dist/skywise-tiles.mapbox.js",
+    "build:mapbox": "npm run browserify:mapbox && npm run uglify:mapbox",
+    "browserify:mapbox-gl": "browserify mapbox-gl.js > dist/skywise-tiles.mapbox-gl.src.js",
+    "uglify:mapbox-gl": "uglifyjs dist/skywise-tiles.mapbox-gl.src.js > dist/skywise-tiles.mapbox-gl.js",
+    "build:mapbox-gl": "npm run browserify:mapbox-gl && npm run uglify:mapbox-gl",
+    "build": "npm-run-all build:*"
   },
   "author": "Jordan Rousseau",
   "license": "MIT",
