updated with changes made from platform work

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,9 @@
     "node": true,
     "amd": false
   },
-
+  "globals": {
+    "Promise": true
+  },
   "rules": {
     "no-alert": 2,
     "no-array-constructor": 2,
